# kobe---ml---copia

./: .gitignore  README.md  aplicacao.py  app.py  pyproject.toml  readme-formatado.md  requirements.txt  run.sh  streamlit_run.sh
conf/base/: catalog.yml  parameters_model_training.yml
data/05_model_input/: base_test.parquet  base_train.parquet
data/06_models/: metricas_teste.csv  metricas_treinamento.csv  predicoes.parquet
data/06_models/modelo_arvore.pkl/2025-04-01T23.13.27.935Z/: modelo_arvore.pkl
data/06_models/modelo_final.pkl/2025-04-01T23.02.06.352Z/: modelo_final.pkl
data/06_models/modelo_regressao.pkl/2025-04-01T22.48.28.704Z/: modelo_regressao.pkl
data/07_model_output/: predicoes.parquet  predicoes_treino.parquet  resultados_predicao.parquet
data/08_reporting/: analise_drift.json  metricas_final.json  metricas_producao.json  metricas_regressao.json
src/: app.py
src/kobe_ml/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/kobe_ml/pipelines/data_processing/: nodes.py  pipeline.py
src/kobe_ml/pipelines/model_deployment/: __init__.py  nodes.py  pipeline.py
src/kobe_ml/pipelines/model_training/: nodes.py  pipeline.py
streamlit_app/: app.py
streamlit_app/mlruns/0/: meta.yaml
